src/compiler/snuql-parser/snuqlParser.cpp

// Generated from snuql.g4 by ANTLR 4.7.2


#include "snuqlListener.h"

#include "snuqlParser.h"


using namespace antlrcpp;
using namespace antlr4;

snuqlParser::snuqlParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

snuqlParser::~snuqlParser() {
  delete _interpreter;
}

std::string snuqlParser::getGrammarFileName() const {
  return "snuql.g4";
}

const std::vector<std::string>& snuqlParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& snuqlParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- MainprogramContext ------------------------------------------------------------------

snuqlParser::MainprogramContext::MainprogramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

snuqlParser::HeaderContext* snuqlParser::MainprogramContext::header() {
  return getRuleContext<snuqlParser::HeaderContext>(0);
}

snuqlParser::ProgramContext* snuqlParser::MainprogramContext::program() {
  return getRuleContext<snuqlParser::ProgramContext>(0);
}


size_t snuqlParser::MainprogramContext::getRuleIndex() const {
  return snuqlParser::RuleMainprogram;
}

void snuqlParser::MainprogramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainprogram(this);
}

void snuqlParser::MainprogramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainprogram(this);
}

snuqlParser::MainprogramContext* snuqlParser::mainprogram() {
  MainprogramContext *_localctx = _tracker.createInstance<MainprogramContext>(_ctx, getState());
  enterRule(_localctx, 0, snuqlParser::RuleMainprogram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    header();
    setState(59);
    program(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HeaderContext ------------------------------------------------------------------

snuqlParser::HeaderContext::HeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

snuqlParser::VersionContext* snuqlParser::HeaderContext::version() {
  return getRuleContext<snuqlParser::VersionContext>(0);
}

std::vector<snuqlParser::IncludeContext *> snuqlParser::HeaderContext::include() {
  return getRuleContexts<snuqlParser::IncludeContext>();
}

snuqlParser::IncludeContext* snuqlParser::HeaderContext::include(size_t i) {
  return getRuleContext<snuqlParser::IncludeContext>(i);
}


size_t snuqlParser::HeaderContext::getRuleIndex() const {
  return snuqlParser::RuleHeader;
}

void snuqlParser::HeaderContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHeader(this);
}

void snuqlParser::HeaderContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHeader(this);
}

snuqlParser::HeaderContext* snuqlParser::header() {
  HeaderContext *_localctx = _tracker.createInstance<HeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, snuqlParser::RuleHeader);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == snuqlParser::T__0) {
      setState(61);
      version();
    }
    setState(67);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == snuqlParser::T__2) {
      setState(64);
      include();
      setState(69);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VersionContext ------------------------------------------------------------------

snuqlParser::VersionContext::VersionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* snuqlParser::VersionContext::Integer() {
  return getToken(snuqlParser::Integer, 0);
}

tree::TerminalNode* snuqlParser::VersionContext::Real() {
  return getToken(snuqlParser::Real, 0);
}


size_t snuqlParser::VersionContext::getRuleIndex() const {
  return snuqlParser::RuleVersion;
}

void snuqlParser::VersionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVersion(this);
}

void snuqlParser::VersionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVersion(this);
}

snuqlParser::VersionContext* snuqlParser::version() {
  VersionContext *_localctx = _tracker.createInstance<VersionContext>(_ctx, getState());
  enterRule(_localctx, 4, snuqlParser::RuleVersion);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(snuqlParser::T__0);
    setState(71);
    _la = _input->LA(1);
    if (!(_la == snuqlParser::Real

    || _la == snuqlParser::Integer)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(72);
    match(snuqlParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IncludeContext ------------------------------------------------------------------

snuqlParser::IncludeContext::IncludeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* snuqlParser::IncludeContext::StringLiteral() {
  return getToken(snuqlParser::StringLiteral, 0);
}


size_t snuqlParser::IncludeContext::getRuleIndex() const {
  return snuqlParser::RuleInclude;
}

void snuqlParser::IncludeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInclude(this);
}

void snuqlParser::IncludeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInclude(this);
}

snuqlParser::IncludeContext* snuqlParser::include() {
  IncludeContext *_localctx = _tracker.createInstance<IncludeContext>(_ctx, getState());
  enterRule(_localctx, 6, snuqlParser::RuleInclude);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(snuqlParser::T__2);
    setState(75);
    match(snuqlParser::StringLiteral);
    setState(76);
    match(snuqlParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

snuqlParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

snuqlParser::StatementContext* snuqlParser::ProgramContext::statement() {
  return getRuleContext<snuqlParser::StatementContext>(0);
}

snuqlParser::ProgramContext* snuqlParser::ProgramContext::program() {
  return getRuleContext<snuqlParser::ProgramContext>(0);
}


size_t snuqlParser::ProgramContext::getRuleIndex() const {
  return snuqlParser::RuleProgram;
}

void snuqlParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void snuqlParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


snuqlParser::ProgramContext* snuqlParser::program() {
   return program(0);
}

snuqlParser::ProgramContext* snuqlParser::program(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  snuqlParser::ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, parentState);
  snuqlParser::ProgramContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, snuqlParser::RuleProgram, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(79);
    statement();
    _ctx->stop = _input->LT(-1);
    setState(85);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<ProgramContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleProgram);
        setState(81);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(82);
        statement(); 
      }
      setState(87);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

snuqlParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

snuqlParser::DeclContext* snuqlParser::StatementContext::decl() {
  return getRuleContext<snuqlParser::DeclContext>(0);
}

snuqlParser::GatedeclStatementContext* snuqlParser::StatementContext::gatedeclStatement() {
  return getRuleContext<snuqlParser::GatedeclStatementContext>(0);
}

snuqlParser::QopStatementContext* snuqlParser::StatementContext::qopStatement() {
  return getRuleContext<snuqlParser::QopStatementContext>(0);
}

snuqlParser::IfStatementContext* snuqlParser::StatementContext::ifStatement() {
  return getRuleContext<snuqlParser::IfStatementContext>(0);
}

snuqlParser::BarrierStatementContext* snuqlParser::StatementContext::barrierStatement() {
  return getRuleContext<snuqlParser::BarrierStatementContext>(0);
}


size_t snuqlParser::StatementContext::getRuleIndex() const {
  return snuqlParser::RuleStatement;
}

void snuqlParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void snuqlParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

snuqlParser::StatementContext* snuqlParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 10, snuqlParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(93);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case snuqlParser::T__3:
      case snuqlParser::T__6: {
        enterOuterAlt(_localctx, 1);
        setState(88);
        decl();
        break;
      }

      case snuqlParser::T__8: {
        enterOuterAlt(_localctx, 2);
        setState(89);
        gatedeclStatement();
        break;
      }

      case snuqlParser::T__12:
      case snuqlParser::T__14:
      case snuqlParser::T__18:
      case snuqlParser::T__19:
      case snuqlParser::T__20:
      case snuqlParser::T__22:
      case snuqlParser::T__23:
      case snuqlParser::T__24:
      case snuqlParser::T__25:
      case snuqlParser::T__26:
      case snuqlParser::T__27:
      case snuqlParser::T__28:
      case snuqlParser::T__29:
      case snuqlParser::T__30:
      case snuqlParser::T__31:
      case snuqlParser::T__32:
      case snuqlParser::T__33:
      case snuqlParser::T__34:
      case snuqlParser::T__35:
      case snuqlParser::T__36:
      case snuqlParser::T__37:
      case snuqlParser::T__38:
      case snuqlParser::T__39:
      case snuqlParser::T__40:
      case snuqlParser::T__41:
      case snuqlParser::T__42:
      case snuqlParser::T__43:
      case snuqlParser::T__44:
      case snuqlParser::T__45:
      case snuqlParser::T__46:
      case snuqlParser::T__47:
      case snuqlParser::T__48:
      case snuqlParser::T__49:
      case snuqlParser::T__50:
      case snuqlParser::Identifier: {
        enterOuterAlt(_localctx, 3);
        setState(90);
        qopStatement();
        break;
      }

      case snuqlParser::T__15: {
        enterOuterAlt(_localctx, 4);
        setState(91);
        ifStatement();
        break;
      }

      case snuqlParser::T__17: {
        enterOuterAlt(_localctx, 5);
        setState(92);
        barrierStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

snuqlParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

snuqlParser::QuantumDeclContext* snuqlParser::DeclContext::quantumDecl() {
  return getRuleContext<snuqlParser::QuantumDeclContext>(0);
}

snuqlParser::ClassicalDeclContext* snuqlParser::DeclContext::classicalDecl() {
  return getRuleContext<snuqlParser::ClassicalDeclContext>(0);
}


size_t snuqlParser::DeclContext::getRuleIndex() const {
  return snuqlParser::RuleDecl;
}

void snuqlParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void snuqlParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}

snuqlParser::DeclContext* snuqlParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 12, snuqlParser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(97);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case snuqlParser::T__3: {
        enterOuterAlt(_localctx, 1);
        setState(95);
        quantumDecl();
        break;
      }

      case snuqlParser::T__6: {
        enterOuterAlt(_localctx, 2);
        setState(96);
        classicalDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumDeclContext ------------------------------------------------------------------

snuqlParser::QuantumDeclContext::QuantumDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* snuqlParser::QuantumDeclContext::Identifier() {
  return getToken(snuqlParser::Identifier, 0);
}

tree::TerminalNode* snuqlParser::QuantumDeclContext::Integer() {
  return getToken(snuqlParser::Integer, 0);
}


size_t snuqlParser::QuantumDeclContext::getRuleIndex() const {
  return snuqlParser::RuleQuantumDecl;
}

void snuqlParser::QuantumDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumDecl(this);
}

void snuqlParser::QuantumDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumDecl(this);
}

snuqlParser::QuantumDeclContext* snuqlParser::quantumDecl() {
  QuantumDeclContext *_localctx = _tracker.createInstance<QuantumDeclContext>(_ctx, getState());
  enterRule(_localctx, 14, snuqlParser::RuleQuantumDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(snuqlParser::T__3);
    setState(100);
    match(snuqlParser::Identifier);
    setState(101);
    match(snuqlParser::T__4);
    setState(102);
    match(snuqlParser::Integer);
    setState(103);
    match(snuqlParser::T__5);
    setState(104);
    match(snuqlParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassicalDeclContext ------------------------------------------------------------------

snuqlParser::ClassicalDeclContext::ClassicalDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* snuqlParser::ClassicalDeclContext::Identifier() {
  return getToken(snuqlParser::Identifier, 0);
}

tree::TerminalNode* snuqlParser::ClassicalDeclContext::Integer() {
  return getToken(snuqlParser::Integer, 0);
}


size_t snuqlParser::ClassicalDeclContext::getRuleIndex() const {
  return snuqlParser::RuleClassicalDecl;
}

void snuqlParser::ClassicalDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassicalDecl(this);
}

void snuqlParser::ClassicalDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassicalDecl(this);
}

snuqlParser::ClassicalDeclContext* snuqlParser::classicalDecl() {
  ClassicalDeclContext *_localctx = _tracker.createInstance<ClassicalDeclContext>(_ctx, getState());
  enterRule(_localctx, 16, snuqlParser::RuleClassicalDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(snuqlParser::T__6);
    setState(107);
    match(snuqlParser::Identifier);
    setState(108);
    match(snuqlParser::T__4);
    setState(109);
    match(snuqlParser::Integer);
    setState(110);
    match(snuqlParser::T__5);
    setState(111);
    match(snuqlParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GatedeclStatementContext ------------------------------------------------------------------

snuqlParser::GatedeclStatementContext::GatedeclStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

snuqlParser::GatedeclContext* snuqlParser::GatedeclStatementContext::gatedecl() {
  return getRuleContext<snuqlParser::GatedeclContext>(0);
}

snuqlParser::GoplistContext* snuqlParser::GatedeclStatementContext::goplist() {
  return getRuleContext<snuqlParser::GoplistContext>(0);
}


size_t snuqlParser::GatedeclStatementContext::getRuleIndex() const {
  return snuqlParser::RuleGatedeclStatement;
}

void snuqlParser::GatedeclStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGatedeclStatement(this);
}

void snuqlParser::GatedeclStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGatedeclStatement(this);
}

snuqlParser::GatedeclStatementContext* snuqlParser::gatedeclStatement() {
  GatedeclStatementContext *_localctx = _tracker.createInstance<GatedeclStatementContext>(_ctx, getState());
  enterRule(_localctx, 18, snuqlParser::RuleGatedeclStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(120);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(113);
      gatedecl();
      setState(114);
      goplist();
      setState(115);
      match(snuqlParser::T__7);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(117);
      gatedecl();
      setState(118);
      match(snuqlParser::T__7);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GatedeclContext ------------------------------------------------------------------

snuqlParser::GatedeclContext::GatedeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* snuqlParser::GatedeclContext::Identifier() {
  return getToken(snuqlParser::Identifier, 0);
}

std::vector<snuqlParser::IdlistContext *> snuqlParser::GatedeclContext::idlist() {
  return getRuleContexts<snuqlParser::IdlistContext>();
}

snuqlParser::IdlistContext* snuqlParser::GatedeclContext::idlist(size_t i) {
  return getRuleContext<snuqlParser::IdlistContext>(i);
}


size_t snuqlParser::GatedeclContext::getRuleIndex() const {
  return snuqlParser::RuleGatedecl;
}

void snuqlParser::GatedeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGatedecl(this);
}

void snuqlParser::GatedeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGatedecl(this);
}

snuqlParser::GatedeclContext* snuqlParser::gatedecl() {
  GatedeclContext *_localctx = _tracker.createInstance<GatedeclContext>(_ctx, getState());
  enterRule(_localctx, 20, snuqlParser::RuleGatedecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(142);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(122);
      match(snuqlParser::T__8);
      setState(123);
      match(snuqlParser::Identifier);
      setState(124);
      idlist();
      setState(125);
      match(snuqlParser::T__9);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(127);
      match(snuqlParser::T__8);
      setState(128);
      match(snuqlParser::Identifier);
      setState(129);
      match(snuqlParser::T__10);
      setState(130);
      match(snuqlParser::T__11);
      setState(131);
      idlist();
      setState(132);
      match(snuqlParser::T__9);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(134);
      match(snuqlParser::T__8);
      setState(135);
      match(snuqlParser::Identifier);
      setState(136);
      match(snuqlParser::T__10);
      setState(137);
      idlist();
      setState(138);
      match(snuqlParser::T__11);
      setState(139);
      idlist();
      setState(140);
      match(snuqlParser::T__9);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GoplistContext ------------------------------------------------------------------

snuqlParser::GoplistContext::GoplistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

snuqlParser::UopStatementContext* snuqlParser::GoplistContext::uopStatement() {
  return getRuleContext<snuqlParser::UopStatementContext>(0);
}

snuqlParser::BarrierStatementContext* snuqlParser::GoplistContext::barrierStatement() {
  return getRuleContext<snuqlParser::BarrierStatementContext>(0);
}

snuqlParser::GoplistContext* snuqlParser::GoplistContext::goplist() {
  return getRuleContext<snuqlParser::GoplistContext>(0);
}


size_t snuqlParser::GoplistContext::getRuleIndex() const {
  return snuqlParser::RuleGoplist;
}

void snuqlParser::GoplistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGoplist(this);
}

void snuqlParser::GoplistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGoplist(this);
}

snuqlParser::GoplistContext* snuqlParser::goplist() {
  GoplistContext *_localctx = _tracker.createInstance<GoplistContext>(_ctx, getState());
  enterRule(_localctx, 22, snuqlParser::RuleGoplist);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(152);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(144);
      uopStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(145);
      barrierStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(146);
      uopStatement();
      setState(147);
      goplist();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(149);
      barrierStatement();
      setState(150);
      goplist();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QopStatementContext ------------------------------------------------------------------

snuqlParser::QopStatementContext::QopStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

snuqlParser::UopStatementContext* snuqlParser::QopStatementContext::uopStatement() {
  return getRuleContext<snuqlParser::UopStatementContext>(0);
}

snuqlParser::MeasureQopContext* snuqlParser::QopStatementContext::measureQop() {
  return getRuleContext<snuqlParser::MeasureQopContext>(0);
}

snuqlParser::ResetQopContext* snuqlParser::QopStatementContext::resetQop() {
  return getRuleContext<snuqlParser::ResetQopContext>(0);
}


size_t snuqlParser::QopStatementContext::getRuleIndex() const {
  return snuqlParser::RuleQopStatement;
}

void snuqlParser::QopStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQopStatement(this);
}

void snuqlParser::QopStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<snuqlListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQopStatement(this);
}

snuqlParser::QopStatementContext* snuqlParser::qopStatement() {
  QopStatementContext *_localctx = _tracker.createInstance<QopStatementContext>(_ctx, getState());
  enterRule(_localctx, 24, snuqlParser::RuleQopStatement);
